--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile 'com.android.support:design:25.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.github.bumptech.glide:glide:3.8.0'
     compile files('libs/volley.jar')
 }
